--- a/app/manifest.json
+++ b/app/manifest.json
@@ -1,7 +1,7 @@
 {
   "name": "Redirect",
   "version": "1.0.2",
-  "manifest_version": 2,
+  "manifest_version": 3,
   "description": "An extension that allows users to easily navigate to saved urls.",
   "omnibox": {
     "keyword": ";"
@@ -12,11 +12,9 @@
   },
   "default_locale": "en",
   "background": {
-    "scripts": [
-      "scripts/background.js"
-    ]
+    "service_worker": "scripts/background.js"
   },
-  "browser_action": {
+  "action": {
     "default_icon": {
       "19": "images/icon-19.png",
       "38": "images/icon-38.png"
@@ -26,8 +24,10 @@
   },
   "permissions": [
     "tabs",
-    "http://*/*",
-    "https://*/*",
     "storage"
+  ],
+  "host_permissions": [
+    "http://*/*",
+    "https://*/*"
   ]
 }
