--- a/app/manifest.json
+++ b/app/manifest.json
@@ -8,6 +8,7 @@
   },
   "icons": {
     "16": "images/icon-16.png",
+    "32": "images/icon-32.png",
     "128": "images/icon-128.png"
   },
   "default_locale": "en",
