change some things

--- a/app/manifest.json
+++ b/app/manifest.json
@@ -20,7 +20,7 @@
       "19": "images/icon-19.png",
       "38": "images/icon-38.png"
     },
-    "default_title": "Redirect",
+    "default_title": "Peregrine",
     "default_popup": "popup.html"
   },
   "permissions": [
