--- a/app/manifest.json
+++ b/app/manifest.json
@@ -25,11 +25,8 @@
   },
   "permissions": [
     "tabs",
+    "activeTab",
     "storage"
-  ],
-  "host_permissions": [
-    "http://*/*",
-    "https://*/*"
   ],
   "web_accessible_resources": [
     {
