--- a/app/manifest.json
+++ b/app/manifest.json
@@ -17,7 +17,8 @@
   },
   "default_locale": "en",
   "background": {
-    "service_worker": "scripts/background.js"
+    "service_worker": "scripts/background.js",
+    "type": "module"
   },
   "action": {
     "default_icon": {
